2014-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Add logging of XWD header values.
	Fix memory leaks in error reporting paths.  Ping mode skips
	allocating memory for data and colormap.  Added a few more header
	validation checks (not complete).  XWD is put in
	UnstableCoderClass until such time as header validation checks are
	complete.

2014-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (WritePDBImage): Use MagickAllocateArray() when
	allocating packets.

	* coders/dpx.c (ReadDPXImage): Validate DPX header orientation and
	number of elements.  Problem was reported by Hanno Böck.

2014-11-20  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadJNGImage): Do not attempt to clean up
	a NULL JNG image.

2014-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/FAQ.rst: Add a FAQ entry regarding what 'identify' reports.
	Resolves SF issue #280 "Better documentation for spurious gm
	identify in Q8 compilation."

2014-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (ModulateImage): ModulateImage() should produce
	a progress indication even if only the colormap is modified.

2014-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Patch by Cédric Demière to fix
	"Memory allocation failed" error when reading PSDs files which
	have no layers.  Delivered via SF patch #41 "PSD : files without
	layers".  Resolves SF bug #242 "Can not convert PSD to JPG or PNG
	(gm convert: Memory allocation failed)".

2014-11-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (WriteWEBPImage): WebP fix by Roman Hiestand to
	make WebP lossless format truely lossless.

	* tests/rwblob.tap (check_types): Added a test for WebP lossless.

	* tests/rwfile.tap: Added a test for WebP lossless.

	* tests/rwblob.c: Added support for -define.

	* tests/rwfile.c: Added support for -define.
